--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ bench = true
 path = "src/soar.rs"
 
 [dependencies]
+log = "0.4.17"
+pretty_env_logger = "0.4.0"
 serde = { version = "1.0", default-features = false, features = ["derive"] }
 serde_json = "1.0.79"
 ureq = "2.4.0"
