--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ pretty_env_logger = "0.4.0"
 serde = { version = "1.0", default-features = false, features = ["derive"] }
 serde_json = "1.0.79"
 ureq = "2.4.0"
+walkdir = "2.3.2"
 
 [profile.release]
 overflow-checks = true
